# pasloe

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pasloe.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0a3e9a1488ea_initial_schema.py  9f5c2d1b7a44_add_domain_detail_tables.py  add_webhooks_table.py
clients/pasloe-input/: Cargo.toml
clients/pasloe-input/src/: main.rs
clients/pasloe-screenshot/: .gitignore  Cargo.toml  README.md  install.ps1  uninstall.ps1
clients/pasloe-screenshot/config/: config.example.toml
clients/pasloe-screenshot/src/: cli.rs  main.rs
clients/pasloe-screenshot/src/capture/: capture.rs  mod.rs  monitor.rs  utils.rs  window.rs
clients/pasloe-screenshot/src/config/: config.rs  init.rs  mod.rs
clients/pasloe-screenshot/src/event/: capture_result.rs  mod.rs
clients/pasloe-screenshot/src/pasloe_client/: client.rs  event.rs  mod.rs
clients/pasloe-screenshot/src/storage/: local.rs  mod.rs  s3.rs
docs/superpowers/specs/: 2026-03-16-pasloe-refactor-design.md
src/pasloe/: __init__.py  api.py  app.py  client.py  config.py  database.py  models.py  pipeline.py  s3.py  store.py  types.py  ui.html  webhook_delivery.py
src/pasloe/domains/: __init__.py  jobs.py  llm.py  tasks.py  tools.py
tests/: test_api.py  test_webhooks.py
