[project]
name = "pasloe"
version = "0.1.0"
description = "Palimpsest V2 — Append-only event store service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pgvector>=0.2.5",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "uuid7>=0.1.0",
    "httpx>=0.27",  # for webhook fire-and-forget
    "aioboto3>=12.0.0",
]

[project.optional-dependencies]
# Minimal deps for consumers (Agent, Supervisor) that only need the HTTP client
client = [
    "httpx>=0.27",
    "pydantic>=2.6.4",
]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pasloe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
