[project]
name = "pasloe"
version = "0.1.0"
description = "Pasloe — Semantically-agnostic append-only event store with schema-driven data promotion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "uuid7>=0.1.0",
    "httpx>=0.27",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
# Minimal deps for consumers (Agent, Supervisor) that only need the HTTP client
client = [
    "httpx>=0.27",
    "pydantic>=2.6.4",
]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src/pasloe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
