[package]
name = "pasloe-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
# Image capture and processing
xcap = "0.7.1"
image = "0.25.9"
imageproc = "0.25.0"
# AI inference
candle-core = "0.9.1"
candle-nn = "0.9.1"
rten = "0.23"
# Utilities
lru = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
chrono = "0.4.42"
# S3 storage (removed rust-s3, using reqwest to API instead)
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Async trait
async-trait = "0.1"
# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"
# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1.12.2"
dirs = "6.0.0"
# Cli
clap = { version = "4.5.53", features = ["derive"] }
# Hostname
hostname = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
